# nes-recompiled

./: .gitignore  AGENTS.md  CMakeLists.txt  COMPATIBILITY.md  GROUND_TRUTH_WORKFLOW.md  QWEN.md  README.md  debug_audio.raw  debug_frame.ppm  imgui.ini  test_apu.nes  test_cpu.nes  test_input.nes  test_ppu.nes
.agent/rules/: rules.md
.github/: copilot-instructions.md
docs/: AUDIO_FIX_PLAN.md
plan/: COMPARISON_SUMMARY.md  IMPLEMENTATION_RESULTS.md  INTERPRETER_FIX_PLAN.md  MMC1_BANK_FIX_PARTIAL.md  MMC1_BANK_FIX_STATUS.md  PALETTE_BANK_ISSUE.md  PALETTE_INVESTIGATION.md  PPUMASK_INVESTIGATION.md  PPU_COMPARISON.md  RUNTIME_BANK_SWITCHING.md  STATUS_REPORT.md  cookie.txt  three_way_comparison_2026-03-17.md
plan/track1_cpu/phase1_decoder/: task001_nes_header.md  task002_6502_decoder.md  task003_analyzer.md
plan/track1_cpu/phase2_codegen/: task004_ir_builder.md  task005_c_emitter.md
plan/track1_cpu/phase3_analysis/: task020_analyzer_memory_map.md  task023_trace_guided_analysis.md  task023a_trace_guided_analysis.md
plan/track2_ppu/phase1_struct/: task006_ppu_context.md
plan/track2_ppu/phase2_fixes/: nmi_trigger_three_way.md  ppustatus_flag_workaround_three_way.md
plan/track3_apu/phase1_struct/: task007_apu_context.md
plan/track4_mappers/phase1_base/: task008_mapper_interface.md
plan/track5_runtime/phase1_analysis/: interpreter_speed_investigation.md
plan/track5_runtime/phase1_core/: task009_nes_context.md
plan/track5_runtime/phase2_fixes/: interpreter_speed_three_way.md
plan/track6_platform/phase1_sdl/: task010_sdl_platform.md
plan/track7_integration/phase1_first_rom/: task011_build_system.md  task012_test_rom.md
plan/track7_integration/phase2_testing/: task021_end_to_end_test.md  task021a_fix_test_rom_builder.md  task021b_run_feature_tests.md  task022_real_rom_test.md  task022a_test_real_rom.md  task024_expand_test_coverage.md
plan/track7_integration/phase3_docs/: task025_documentation_cleanup.md
plan/track8_ram_code/: README.md  overview.md
recompiler/: CMakeLists.txt
recompiler/include/recompiler/: analyzer.h  bank_tracker.h  decoder.h  decoder_6502.h  ram_mapping.h  rom.h
recompiler/include/recompiler/codegen/: c_emitter.h  emitter.h
recompiler/include/recompiler/ir/: ir.h  ir_builder.h  ir_optimizer.h
recompiler/src/: analyzer.cpp  bank_tracker.cpp  decoder.cpp  decoder_6502.cpp  generator.cpp  main.cpp  ram_mapping.cpp  rom.cpp  symbol_table.cpp  test_analyzer.cpp
recompiler/src/codegen/: c_emitter.cpp
recompiler/src/ir/: ir_builder.cpp  ir_optimizer.cpp
runtime/: CMakeLists.txt
runtime/include/: audio.h  audio_stats.h  cpu6502_interp.h  nesrt.h  nesrt_debug.h  nesrt_mapper.h  nesrt_trace.h  platform_sdl.h  ppu.h  ram_code_cache.hpp
runtime/src/: audio.c  audio_stats.c  cpu6502_interp.c  exec_trace.c  gbrt.c  interpreter.c  mapper.c  nesrt.c  nesrt_trace.c  platform_sdl.cpp  ppu.c  ram_code_cache.cpp
scripts/: TRACE_GUIDED_README.md  capture_frames.py  capture_ref_frames.py  compare_frames.py  emulator_trace.py  emulator_trace.sh  gdb_backtrace.gdb  trace_guided.py  trace_guided_recomp.sh
testroms/: FEATURE_COVERAGE.md  README.md  README_FEATURES.md  README_MMC1_PALETTE_TEST.md  README_MMC1_RUNTIME_BANK.md  build.sh  build_features.sh  build_test01.py  build_test02.py  build_test03.py  build_test_apu.py  build_test_cpu.py  build_test_input.py  build_test_mmc1.py  build_test_mmc1_palette.py  build_test_mmc1_runtime_bank.py  build_test_ppu.py  build_test_ppu_init.py  build_test_timer.py  test01_simple.nes  test02_transfers.nes  test03_addressing.nes  test_apu.nes  test_cpu.nes  test_input.nes  test_mmc1.nes  test_mmc1_palette.nes  test_mmc1_runtime_bank.nes  test_ppu.nes  test_ppu_init.nes  test_timer.nes
tools/: analyze_audio.py  diagnose_audio.py
(+28 files in other folders)
